# uvrs

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .rumdl.toml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/uvrs/: __init__.py  __main__.py
tests/: __init__.py  test_uvrs.py
