[project]
name = "uvrs"
version = "0.1.0"
description = "Create and run uv scripts with POSIX standardized shebang line"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
]

[project.scripts]
uvrs = "uvrs:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
