[project]
name = "uvrs"
version = "0.7.0"
description = "Create and run uv scripts with POSIX standardized shebang line"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.0",
    "tomlkit>=0.13.3",
]

[project.urls]
homepage = "https://github.com/treyhunner/uvrs"
repository = "https://github.com/treyhunner/uvrs"
issues = "https://github.com/treyhunner/uvrs/issues"

[project.scripts]
uvrs = "uvrs:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.1a22",
    "pytest-mock>=3.14.0",
    "prek>=0.2.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "rumdl>=0.0.156",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/uvrs", "tests"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
